--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,14 @@
+APScheduler==3.5.3
 Click==7.0
 Flask==1.0.2
+Flask-APScheduler==1.11.0
 Flask-Cors==3.0.7
 Flask-JSONRPC==0.3.1
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+python-dateutil==2.7.5
+pytz==2018.7
 six==1.12.0
+tzlocal==1.5.1
 Werkzeug==0.14.1
